Fix layout issues in mobile version

--- a/views/styles/admin-manage-users.css
+++ b/views/styles/admin-manage-users.css
@@ -301,7 +301,7 @@ h3 {
 
 @media only screen and (max-width: 800px) {
   .container {
-    grid-template-columns: 50px 1fr;
+    grid-template-rows: 50px 1fr;
   }
 
   .user-card-info {
